# mgp-vn-tool

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: release.yml
docs/: bangumi_api.md  erogamescape_api.md  moegirl_api.md  vndb_api.md
scripts/: bump-version.ts
src/: App.css  App.tsx  main.tsx  routes.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bangumi.rs  company.rs  erogamescape.rs  feishu.rs  http.rs  lib.rs  main.rs  moegirl.rs  settings.rs  vndb.rs
src/api/: bangumi.ts  company.ts  erogamescape.ts  feishu.ts  moegirl.ts  vndb.ts
src/components/: Background.tsx  CodePanel.tsx  DataTablePanel.tsx  EmptyPlaceholder.tsx  HelpButton.tsx  KeepAlive.tsx  MoegirlLink.tsx  SearchInput.tsx  background.tsx  code-panel.tsx  copy-button.tsx  data-table-panel.tsx  empty-article-warning.tsx  external-link.tsx  help-button.tsx  moegirl-link.tsx  page.tsx  search-input.tsx
src/components/SearchInput/: index.tsx
src/icons/: Game.tsx  index.tsx
src/lib/: config-store.ts  erogamescape-dict.ts  erogamescapeDict.ts  moegirl-dict.ts  types.ts
src/stores/: article-store.ts  articleStore.ts  moegirl-store.ts  moegirlStore.ts  settings-store.ts  settingsStore.ts
src/utils/: article-map.ts  articleMap.ts  constants.ts  table.ts  text.ts
(+33 files in other folders)
