[package]
name = "mgp-vn-tool"
version = "0.2.0"
description = "萌百视研会条目工具"
edition = "2021"

[lib]
name = "mgp_vn_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.22"
futures-util = "0.3"
log = "0.4"
tokio = { version = "1", features = ["time"] }
urlencoding = "2"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
